# some-lispy-lang-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  repl.rs
src/compile/: Cargo.toml
src/compile/src/: code_gen.rs  environment.rs  environment2.rs  ir.rs  lib.rs  resolution.rs  resolution2.rs  tests.rs
src/eval/: class_loader.rs  environment.rs  interpreter.rs  interpreter2.rs  mod.rs  operation_eval.rs
src/eval/src/: lib.rs
src/lang/: Cargo.toml  datatypes.rs  mod.rs  types.rs
src/lang/src/: ast.rs  environment.rs  lib.rs  op_codes.rs  token.rs  types.rs  util.rs
src/lib/: std.scm
src/parse/: Cargo.toml  ast_nodes.rs  lexer.rs  mod.rs  parser.rs  test.rs  token.rs  util.rs
src/parse/src/: ast.rs  ast_nodes.rs  code_gen.rs  environment.rs  grammar.rs  lexer.rs  lib.rs  op_codes.rs  parser.rs  resolution.rs  test.rs  tests.rs  token.rs  types.rs  util.rs
src/test/: class.scm
src/tests/: sandbox.rs
src/vm/: Cargo.toml
src/vm/src/: heap.rs  lib.rs  op_codes.rs  vm.rs
test_project/: main.ms
test_project/TestNameSpace/: funcs.ms  funcs_two.ms
