[package]
name = "some-lispy-lang-rs"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "repl"
path = "src/repl.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
opt-level = 3
overflow-checks = false
lto = true


[dependencies]
ahash = "0.8.11"
backtrace-on-stack-overflow = "0.3.0"
